[package]
name = "frame-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.1.8", features = ["derive"] }
rayon = { version = "1.6.1" }
num_cpus = { version = "1.15.0" }
image = { version = "0.24.5" }
